tests/kiama/negative/type_errors/L1/8_badeq1.ob
MODULE badeq;

VAR
    avar : INTEGER;
    bvar : BOOLEAN;

BEGIN
    bvar := avar = bvar
END badeq.
